Add check function for passing data to see whether the data is missing or not

--- a/q1.html
+++ b/q1.html
@@ -85,7 +85,7 @@
         var info2 = document.getElementById("q1_info2").value;
         var info3 = document.getElementById("q1_info3").value;
         var info4 = document.getElementById("q1_info4").value;
-        if (info1 !== "" && info2 !== "" && info3 !== "" && info4 !== "") {
+        //if (info1 !== "" && info2 !== "" && info3 !== "" && info4 !== "") {
             var cart={
                 "q1_info1":info1,
                 "q1_info2":info2,
@@ -106,11 +106,11 @@
                     }
                 }
             });
-            window.location.href = "q2.html"
-        }else {
-            alert("Please fill the form");
-            console.log("fail")
-        }
+            //window.location.href = "q2.html"
+       // }else {
+       //     alert("Please fill the form");
+       //     console.log("fail")
+       // }
     }
 
     $(".banner").load("index.html .top-area");
