Update Full function Ajax, congratulation page, add tab funtion on p6

--- a/q1.html
+++ b/q1.html
@@ -16,94 +16,102 @@
     <title>Map My World</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row clearfix wrap">
-            <div class="col-xs-6 col-md-2 column nav-bar">
-                <div class="banner"></div>
-                <div id="accordion">
-                    <h2>ME MYSELF</h2>
-                    <div class="nav-stacked">
-                        <dl>
-                            <dd><a href="q1.html">Question1</a></dd>
-                            <dd><a href="q2.html">Question2</a></dd>
-                            <dd><a href="q3.html">Question3</a></dd>
-                            <dd><a href="q4.html">Question4</a></dd>
-                            <dd><a href="q5.html">Question5</a></dd>
-                            <dd><a href="q6.html">Question6</a></dd>
-                            <dd><a href="q7.html">Question7</a></dd>
-                            <dd><a href="q8.html">Question8</a></dd>
-                            <dd><a href="q9.html">Question9</a></dd>
-                        </dl>
-                    </div>
-                    <h2>DREAM & GOAL</h2>
-                    <div class="nav-stacked">
-                        <dl>
-                            <dd><a href="q10.html">Question10</a></dd>
-                            <dd><a href="q11.html">Question11</a></dd>
-                            <dd><a href="q12.html">Question12</a></dd>
-                            <dd><a href="q13.html">Question13</a></dd>
-                        </dl>
-                    </div>
+<div class="container-fluid">
+    <div class="row clearfix wrap">
+        <div class="col-xs-6 col-md-2 column nav-bar">
+            <div class="banner"></div>
+            <div id="accordion">
+                <h2>ME MYSELF</h2>
+                <div class="nav-stacked">
+                    <dl>
+                        <dd><a href="q1.html">Question1</a></dd>
+                        <dd><a href="q2.html">Question2</a></dd>
+                        <dd><a href="q3.html">Question3</a></dd>
+                        <dd><a href="q4.html">Question4</a></dd>
+                        <dd><a href="q5.html">Question5</a></dd>
+                        <dd><a href="q6.html">Question6</a></dd>
+                        <dd><a href="q7.html">Question7</a></dd>
+                        <dd><a href="q8.html">Question8</a></dd>
+                        <dd><a href="q9.html">Question9</a></dd>
+                    </dl>
                 </div>
-            </div>
-            <div class="col-xs-6 col-md-10 column">
-                <h1>Who I am
-                    <small><br><em>My feelings, my beliefs and my attitudes are important to how I act, think and express myself.</em></small></h1>
-                <div class="row clearfix" style="margin-top: 5%">
-                    <div class="col-md-6 column form-group">
-                        <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What is important to me?</h3>
-                        <textarea id="q1_info1" class="form-control" placeholder="Think about what makes you happy and what makes you sad"></textarea>
-                    </div>
-
-                    <div class="col-md-6 column form-group">
-                        <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do I like about myself?</h3>
-                        <textarea id="q1_info2" class="form-control"></textarea>
-                    </div>
-                </div>
-                <div class="row clearfix">
-                    <div class="col-md-6 column form-group">
-                        <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do other people like about me?</h3>
-                        <textarea id="q1_info3" class="form-control"></textarea>
-                    </div>
-                    <div class="col-md-6 column form-group">
-                        <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How to best support me:</h3>
-                        <textarea id="q1_info4" class="form-control" placeholder="Think about how you like to be treated by the people who help you"></textarea>
-                    </div>
-                </div>
-                <div class="side-bar">
-                    <a href="#" onclick="submitform()" class="icon-ad"><h4>Done</h4></a>
+                <h2>DREAM & GOAL</h2>
+                <div class="nav-stacked">
+                    <dl>
+                        <dd><a href="q10.html">Question10</a></dd>
+                        <dd><a href="q11.html">Question11</a></dd>
+                        <dd><a href="q12.html">Question12</a></dd>
+                        <dd><a href="q13.html">Question13</a></dd>
+                    </dl>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="col-xs-6 col-md-10 column">
+            <h1>Who I am
+                <small><br><em>My feelings, my beliefs and my attitudes are important to how I act, think and express myself.</em></small></h1>
+            <div class="row clearfix" style="margin-top: 5%">
+                <div class="col-md-6 column form-group">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What is important to me?</h3>
+                    <textarea id="q1_info1" class="form-control" placeholder="Think about what makes you happy and what makes you sad"></textarea>
+                </div>
 
-        <div class="row clearfix footer"></div>
+                <div class="col-md-6 column form-group">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do I like about myself?</h3>
+                    <textarea id="q1_info2" class="form-control"></textarea>
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="col-md-6 column form-group">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do other people like about me?</h3>
+                    <textarea id="q1_info3" class="form-control"></textarea>
+                </div>
+                <div class="col-md-6 column form-group">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How to best support me:</h3>
+                    <textarea id="q1_info4" class="form-control" placeholder="Think about how you like to be treated by the people who help you"></textarea>
+                </div>
+            </div>
+            <div class="side-bar">
+                <a href="#" type="button" onclick="submitform()" class="icon-ad"><h4>Done</h4></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row clearfix footer"></div>
 </body>
 <script>
     function submitform() {
-        var info1 = document.getElementById('q1_info1').value;
-        var info2 = document.getElementById("q1_info2").value;
-        var info3 = document.getElementById("q1_info3").value;
-        var info4 = document.getElementById("q1_info4").value;
-        if (info1 !== "" && info2 !== "" && info3 !== "" && info4 !== "") {
-            var cart={
-                "q1_info1":info1,
-                "q1_info2":info2,
-                "q1_info3":info3,
-                "q1_info4":info4
-            };
+        var f = document.getElementsByTagName('textarea');
+        if (f[0].value!==""&&f[1].value!==""&&f[2].value!==""&&f[3].value!=="") {
+            var cart={"q1_info1": f[0].value, "q1_info2": f[1].value, "q1_info3": f[2].value, "q1_info4": f[3].value};
             console.log(cart);
             $.ajax({
                 url: "server/q1.php",
                 data: cart,
                 type: "POST",
+                dataType:'json',
                 success: function (data) {
                     console.log(data);
-                    if (data == "success") {
-                        alert("success");
-                    } else {
-                        console.log(data);
+                    var i, x="";
+                    for(i in data.result){
+                        x+=data.result[i];
                     }
+                    console.log(x);
+                    if (x == "success") {
+                        console.log("the request and value delivered successfully");
+                    }
+                    else if(x=="noUser")
+                    {
+                        alert("No Record!\nPlease start from the beginning");
+                        window.location.href="index.html";
+                        console.log("Cookie is destroyed or same email address");
+                    }
+                    else {
+                        console.log("Thread went through the php, but data failed to deliver");
+                    }
+                },
+                error:function(XMLHttpRequest, textStatus, errorThrown){
+                    alert ("XMLHttpRequest.status="+XMLHttpRequest.status+"\ntextStatus="+textStatus+"\nerrorThrown=" + errorThrown);
                 }
             });
             window.location.href = "q2.html"
