--- a/q4.html
+++ b/q4.html
@@ -69,10 +69,11 @@
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do they help me with?</h3>
                     <textarea id="q4_info4" class="form-control" placeholder=""></textarea>
                 </div>
-                <div class="col-md-4 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Do I use any equipment or other things to help me at home?</h3>
-                    <textarea id="q4_info5" class="form-control" placeholder=""></textarea>
+                <div class="col-md-4 column form-group p4-label">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Do I use any equipment?</h3>
+                    <textarea id="q4_info5" class="form-control" placeholder=" Or other things to help me at home"></textarea>
                 </div>
+                <div class="side-bar"></div>
             </div>
         </div>
     </div>
@@ -81,6 +82,49 @@
 <div class="row clearfix footer"></div>
 </body>
 <script>
+
+    function submitform() {
+        var f = document.getElementsByTagName('textarea');
+        if (f[0].value!==""&&f[1].value!==""&&f[2].value!==""&&f[3].value!==""&&f[4].value!=="") {
+            var cart= {"q4_info1": f[0].value, "q4_info2": f[1].value, "q4_info3": f[2].value, "q4_info4": f[3].value,"q4_info5": f[4].value};
+            console.log(cart);
+            $.ajax({
+                url: "server/q4.php",
+                data: cart,
+                type: "POST",
+                dataType:'json',
+                success: function (data) {
+                    console.log(data);
+                    var i, x="";
+                    for(i in data.result){
+                        x+=data.result[i];
+                    }
+                    console.log(x);
+                    if (x == "success") {
+                        console.log("the request and value delivered successfully");
+                    }
+                    else if(x=="noUser")
+                    {
+                        alert("No Record!\nPlease start from the beginning");
+                        window.location.href="index.html";
+                        console.log("Cookie is destroyed or same email address");
+                    }
+                    else {
+                        console.log("Thread went through the php, but data failed to deliver");
+                    }
+                },
+                error:function(XMLHttpRequest, textStatus, errorThrown){
+                    alert ("XMLHttpRequest.status="+XMLHttpRequest.status+"\ntextStatus="+textStatus+"\nerrorThrown=" + errorThrown);
+                }
+            });
+            window.location.href = "q5.html";
+        }else {
+            alert("Please fill the form");
+            console.log("fail")
+        }
+    }
+
+    $(".side-bar").load("q1.html .side-bar");
     $(".banner").load("index.html .top-area");
     $(".footer").load("index.html #footer");
 </script>
