--- a/q1.html
+++ b/q1.html
@@ -9,52 +9,66 @@
     <link href="css/jquery-ui.min.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <link href="css/general-question.css" rel="stylesheet">
+    <link href="css/navigation.css" rel="stylesheet">
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="js/load-pages.js"></script>
+    <!--<script type="text/javascript" src="js/jquery-ui.min.js"></script>-->
+    <script type="text/javascript" src="js/cookie.js"></script>
+    <script>
+        $( document).ready(function() {
+            var username=getCookie("username");
+            if(username!=null)
+            {
+                requestData = {
+                    "table": "table1"
+                };
+                $.ajax({
+                    url: "server/get_info.php",
+                    data: requestData,
+                    type: "POST",
+                    dataType: 'json',
+                    success: function (data) {
+
+                        if (data.result == "success") {
+                            //alert("success");
+                            console.log(data.return);
+
+                            $.each(data.return, function(key, value) {
+                                //console.log(key + ": "+ data.return[key]);
+                                var value = data.return[key];
+                                $('#'+key).append(value);
+                            });
+                        } else {
+                            console.log(data.return);
+                        }
+                    }
+                });
+            }
+        });
+    </script>
     <title>Map My World</title>
 </head>
 <body>
 <div class="container-fluid">
     <div class="row clearfix wrap">
         <div class="col-xs-6 col-md-2 column nav-bar">
-            <div class="banner"></div>
-            <div id="accordion">
-                <h2>ME MYSELF</h2>
-                <div class="nav-stacked">
-                    <dl>
-                        <dd><a href="q1.html">Question1</a></dd>
-                        <dd><a href="q2.html">Question2</a></dd>
-                        <dd><a href="q3.html">Question3</a></dd>
-                        <dd><a href="q4.html">Question4</a></dd>
-                        <dd><a href="q5.html">Question5</a></dd>
-                        <dd><a href="q6.html">Question6</a></dd>
-                        <dd><a href="q7.html">Question7</a></dd>
-                        <dd><a href="q8.html">Question8</a></dd>
-                        <dd><a href="q9.html">Question9</a></dd>
-                    </dl>
-                </div>
-                <h2>DREAM & GOAL</h2>
-                <div class="nav-stacked">
-                    <dl>
-                        <dd><a href="q10.html">Question10</a></dd>
-                        <dd><a href="q11.html">Question11</a></dd>
-                        <dd><a href="q12.html">Question12</a></dd>
-                        <dd><a href="q13.html">Question13</a></dd>
-                    </dl>
-                </div>
+            <div class="top-area">
+                <a href="index.html"><img src="img/logo-index.gif" class="img-responsive center-block" alt="logo" style="padding-bottom: 10px"/></a>
             </div>
+            <div id="left-navigation"></div>
         </div>
+
         <div class="col-xs-6 col-md-10 column">
-            <h1>Who I am
-                <small><br><em>My feelings, my beliefs and my attitudes are important to how I act, think and express myself.</em></small></h1>
-            <div class="row clearfix" style="margin-top: 5%">
+            <h1>Who I am<small><br><em>My feelings, my beliefs and my attitudes are important to how I act, think and express myself.</em></small></h1>
+            <ol class="breadcrumb">
+                <li><a href="index.html">Home</a></li>
+                <li class="active">Question 1</li>
+            </ol>
+            <div class="row clearfix">
                 <div class="col-md-6 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What is important to me?</h3>
                     <textarea id="q1_info1" class="form-control" placeholder="Think about what makes you happy and what makes you sad"></textarea>
                 </div>
-
                 <div class="col-md-6 column form-group">
                     <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do I like about myself?</h3>
                     <textarea id="q1_info2" class="form-control"></textarea>
@@ -71,7 +85,7 @@
                 </div>
             </div>
             <div class="side-bar">
-                <a href="#" type="button" onclick="submitform()" class="icon-ad"><h4>Done</h4></a>
+                <a href="#" type="button" onclick="submitform()" class="icon-ad"><h4>SAVE</h4></a>
             </div>
         </div>
     </div>
@@ -81,23 +95,9 @@
 </body>
 <script>
     function submitform() {
-<<<<<<< HEAD
-        var info1 = document.getElementById('q1_info1').value;
-        var info2 = document.getElementById("q1_info2").value;
-        var info3 = document.getElementById("q1_info3").value;
-        var info4 = document.getElementById("q1_info4").value;
-        //if (info1 !== "" && info2 !== "" && info3 !== "" && info4 !== "") {
-            var cart={
-                "q1_info1":info1,
-                "q1_info2":info2,
-                "q1_info3":info3,
-                "q1_info4":info4
-            };
-=======
         var f = document.getElementsByTagName('textarea');
         if (f[0].value!==""&&f[1].value!==""&&f[2].value!==""&&f[3].value!=="") {
             var cart={"q1_info1": f[0].value, "q1_info2": f[1].value, "q1_info3": f[2].value, "q1_info4": f[3].value};
->>>>>>> 57888822829c14b4acc0dc09fae1d17bdd9d7d93
             console.log(cart);
             $.ajax({
                 url: "server/q1.php",
@@ -113,6 +113,7 @@
                     console.log(x);
                     if (x == "success") {
                         console.log("the request and value delivered successfully");
+                        window.location.href = "q2.html";
                     }
                     else if(x=="noUser")
                     {
@@ -128,14 +129,15 @@
                     alert ("XMLHttpRequest.status="+XMLHttpRequest.status+"\ntextStatus="+textStatus+"\nerrorThrown=" + errorThrown);
                 }
             });
-            //window.location.href = "q2.html"
-       // }else {
-       //     alert("Please fill the form");
-       //     console.log("fail")
-       // }
+
+        }else {
+            alert("Please fill the form");
+            console.log("fail")
+        }
     }
 
-    $(".banner").load("index.html .top-area");
-    $(".footer").load("index.html #footer");
+    //    page loading
+    $("#left-navigation").load("index.html .com__nav");
+    //    $(".footer").load("index.html #footer");
 </script>
 </html>
